z-index issue fixed
ledger cr/Dr convert text into Credit Debit

--- a/apps/web-giddh/src/app/shared/header/header.component.scss
+++ b/apps/web-giddh/src/app/shared/header/header.component.scss
@@ -569,8 +569,7 @@ background-color:$headerBtnColor;
     position: fixed;
     width: 100%;
     top: 0;
-
-    z-index: 9990;
+    z-index: 9994;
 }
 
 .primary-header .giddh-logo {
